<?xml version="1.0"?>
<package>
	<name>ir_fsm</name>
	<version>0.1.0</version>
	<description>This package gathers the different state machines used for MILO</description>

	<maintainer email="gabriel.urbain@gmail.com">Gabriel Urbain</maintainer>
	<license>BSD</license>
	<url type="website">http://www.irobotique.be/</url>
	<author email="gabriel.urbain@gmail.com">Gabriel Urbain</author>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>rospy</build_depend>
	<run_depend>rospy</run_depend>
	<run_depend>ir_voice</run_depend>

</package>