<?xml version="1.0"?>
<package>
	<name>ir_fsm_test</name>
	<version>0.1.0</version>
	<description>Test node for debugging FSM</description>

	<maintainer email="gabriel.urbain@gmail.com">Gabriel Urbain</maintainer>
	<license>BSD</license>
	<url type="website">http://www.irobotique.be/</url>
	<author email="gabriel.urbain@gmail.com">Gabriel Urbain</author>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>rospy</build_depend>
	<run_depend>rospy</run_depend>
	<run_depend>ir_fsm</run_depend>

</package>