<?xml version="1.0"?>
<package>
	<name>ir_joy_cmd</name>
	<version>0.1.0</version>
	<description>Listen to joystick message and dispatch them conveniently</description>

	<maintainer email="gurbain@mit.edu">Gabriel Urbain</maintainer>
	<license>BSD</license>
	<url type="website">http://www.irobotique.be/</url>
	<author email="gurbain@mit.edu.tld">Gabriel Urbain</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>joy</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>

</package>