<?xml version="1.0"?>
<package>
	<name>ir_voice</name>
	<version>0.1.0</version>
	<description>Voice tools using Acapela for speech synthesis and Google for speech recognition</description>

	<maintainer email="gabriel.urbain@gmail.com">Gabriel Urbain</maintainer>
	<license>BSD</license>
	<url type="website">http://www.irobotique.be/</url>
	<author email="gabriel.urbain@gmail.com">Gabriel Urbain</author>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>rospy</build_depend>
	<run_depend>rospy</run_depend>

</package>